[gups_rmw/memcpy] remove broken locs

--- a/apps/memcpy/Makefile
+++ b/apps/memcpy/Makefile
@@ -30,8 +30,8 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 
 include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
 
-# for regression
-EXECUTION_DIRS := $(addprefix $(APP_PATH)/,$(TESTS_DIRS))
-include $(HB_HAMMERBENCH_PATH)/apps/common_complex.mk
+# # for regression
+# EXECUTION_DIRS := $(addprefix $(APP_PATH)/,$(TESTS_DIRS))
+# include $(HB_HAMMERBENCH_PATH)/apps/common_complex.mk
 
 
