--- a/apps/gups_rmw/Makefile
+++ b/apps/gups_rmw/Makefile
@@ -32,6 +32,6 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
 
 # regression
-EXECUTION_DIRS := $(addprefix $(APP_PATH)/,$(TESTS_DIRS))
-include $(HB_HAMMERBENCH_PATH)/apps/common_complex.mk
+#EXECUTION_DIRS := $(addprefix $(APP_PATH)/,$(TESTS_DIRS))
+#include $(HB_HAMMERBENCH_PATH)/apps/common_complex.mk
 
