--- a/apps/fft/256/Makefile
+++ b/apps/fft/256/Makefile
@@ -5,9 +5,11 @@ all: generate
 
 
 # call to generate a test name
-test-name = num-iter_$(1)__warm-cache_$(2)
+test-name = tile-x_$(1)__tile-y_$(2)__num-iter_$(3)__warm-cache_$(4)
 
 # call to get parameter from test name
+get-tile-x = $(lastword $(subst _, ,$(filter tile-x_%,$(subst __, ,$(1)))))
+get-tile-y = $(lastword $(subst _, ,$(filter tile-y_%,$(subst __, ,$(1)))))
 get-num-iter = $(lastword $(subst _, ,$(filter num-iter_%,$(subst __, ,$(1)))))
 get-warm-cache = $(lastword $(subst _, ,$(filter warm-cache_%,$(subst __, ,$(1)))))
 
@@ -22,6 +24,8 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 	@mkdir -p $(dir $@)
 	@touch $@
 	@echo test-name  = $* >> $@
+	@echo tile-x = $(call get-tile-x,$*) >> $@
+	@echo tile-y = $(call get-tile-y,$*) >> $@
 	@echo num-iter = $(call get-num-iter,$*) >> $@
 	@echo warm-cache = $(call get-warm-cache,$*) >> $@
 
