gups_rms num-iter

--- a/apps/gups_rmw/Makefile
+++ b/apps/gups_rmw/Makefile
@@ -4,13 +4,14 @@ HB_HAMMERBENCH_PATH = $(shell git rev-parse --show-toplevel)
 all: generate
 
 # call to generate a test name
-test-name = tile-x_$(1)__tile-y_$(2)__A-size_$(3)__warm-cache_$(4)
+test-name = tile-x_$(1)__tile-y_$(2)__A-size_$(3)__warm-cache_$(4)__num-iter_$(5)
 
 # call to get parameter from test name
 get-tile-x = $(lastword $(subst _, ,$(filter tile-x_%,$(subst __, ,$(1)))))
 get-tile-y = $(lastword $(subst _, ,$(filter tile-y_%,$(subst __, ,$(1)))))
 get-A-size = $(lastword $(subst _, ,$(filter A-size_%,$(subst __, ,$(1)))))
 get-warm-cache = $(lastword $(subst _, ,$(filter warm-cache_%,$(subst __, ,$(1)))))
+get-num-iter = $(lastword $(subst _, ,$(filter num-iter_%,$(subst __, ,$(1)))))
 
 # defines tests
 TESTS =
@@ -28,6 +29,7 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 	@echo tile-y = $(call get-tile-y,$*) >> $@
 	@echo A-size = $(call get-A-size,$*) >> $@
 	@echo warm-cache = $(call get-warm-cache,$*) >> $@
+	@echo num-iter = $(call get-num-iter,$*) >> $@
 
 include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
 
