--- a/apps/memcpy_no_stripe/Makefile
+++ b/apps/memcpy_no_stripe/Makefile
@@ -4,12 +4,11 @@ HB_HAMMERBENCH_PATH = $(shell git rev-parse --show-toplevel)
 all: generate
 
 # call to generate a test name
-test-name = tile-x_$(1)__tile-y_$(2)__buffer-size_$(3)__warm-cache_$(4)
+test-name = width_$(1)__num-iter_$(2)__warm-cache_$(3)
 
 # call to get parameter from test name
-get-tile-x = $(lastword $(subst _, ,$(filter tile-x_%,$(subst __, ,$(1)))))
-get-tile-y = $(lastword $(subst _, ,$(filter tile-y_%,$(subst __, ,$(1)))))
-get-buffer-size = $(lastword $(subst _, ,$(filter buffer-size_%,$(subst __, ,$(1)))))
+get-width = $(lastword $(subst _, ,$(filter width_%,$(subst __, ,$(1)))))
+get-num-iter = $(lastword $(subst _, ,$(filter num-iter_%,$(subst __, ,$(1)))))
 get-warm-cache = $(lastword $(subst _, ,$(filter warm-cache_%,$(subst __, ,$(1)))))
 
 # defines tests
@@ -23,15 +22,8 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 	@mkdir -p $(dir $@)
 	@touch $@
 	@echo test-name  = $* >> $@
-	@echo tile-x = $(call get-tile-x,$*) >> $@
-	@echo tile-y = $(call get-tile-y,$*) >> $@
-	@echo buffer-size = $(call get-buffer-size,$*) >> $@
+	@echo width = $(call get-width,$*) >> $@
+	@echo num-iter = $(call get-num-iter,$*) >> $@
 	@echo warm-cache = $(call get-warm-cache,$*) >> $@
 
 include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
-
-# for regression
-EXECUTION_DIRS := $(addprefix $(APP_PATH)/,$(TESTS_DIRS))
-include $(HB_HAMMERBENCH_PATH)/apps/common_complex.mk
-
-
