--- a/apps/aes/opt-pod/Makefile
+++ b/apps/aes/opt-pod/Makefile
@@ -11,8 +11,8 @@
 ###############################################################################
 
 HB_HAMMERBENCH_PATH:=$(shell git rev-parse --show-toplevel)
-tile-x = 16
-tile-y = 8
+tile-x ?= 16
+tile-y ?= 8
 override BSG_MACHINE_PATH = $(REPLICANT_PATH)/machines/pod_X1Y1_ruche_X$(tile-x)Y$(tile-y)_hbm_one_pseudo_channel
 include $(HB_HAMMERBENCH_PATH)/mk/environment.mk
 
