--- a/apps/gemm/sgemm_batched_16x16/Makefile
+++ b/apps/gemm/sgemm_batched_16x16/Makefile
@@ -5,11 +5,12 @@ all: generate
 
 
 # call to generate a test name
-test-name = tile-x_$(1)__tile-y_$(2)
+test-name = tile-x_$(1)__tile-y_$(2)__batch_$(3)
 
 # call to get parameter from test name
 get-tile-x= $(lastword $(subst _, ,$(filter tile-x_%,$(subst __, ,$(1)))))
 get-tile-y= $(lastword $(subst _, ,$(filter tile-y_%,$(subst __, ,$(1)))))
+get-batch= $(lastword $(subst _, ,$(filter batch_%,$(subst __, ,$(1)))))
 
 # defines tests
 TESTS =
@@ -24,9 +25,10 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 	@echo test-name  = $* >> $@
 	@echo tile-x  = $(call get-tile-x,$*) >> $@
 	@echo tile-y  = $(call get-tile-y,$*) >> $@
+	@echo batch  = $(call get-batch,$*) >> $@
 
 include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
 
 # for regression
-EXECUTION_DIRS := $(addprefix $(APP_PATH)/,$(TESTS_DIRS))
-include $(HB_HAMMERBENCH_PATH)/apps/common_complex.mk
+#EXECUTION_DIRS := $(addprefix $(APP_PATH)/,$(TESTS_DIRS))
+#include $(HB_HAMMERBENCH_PATH)/apps/common_complex.mk
