--- a/apps/multipod/spgemm_tg/Makefile
+++ b/apps/multipod/spgemm_tg/Makefile
@@ -4,14 +4,13 @@ HB_HAMMERBENCH_PATH = $(shell git rev-parse --show-toplevel)
 all: generate
 
 # test name
-test-name = graph_$(1)__pod-id_$(2)__tgx_$(3)__tgy_$(4)__tlevel_$(5)
+test-name = graph_$(1)__pod-id_$(2)__num-tg_$(3)__tlevel_$(4)
 
 
 # Get parameters;
 get-graph  = $(lastword $(subst _, ,$(filter graph_%,$(subst __, ,$(1)))))
 get-pod-id = $(lastword $(subst _, ,$(filter pod-id_%,$(subst __, ,$(1)))))
-get-tgx = $(lastword $(subst _, ,$(filter tgx_%,$(subst __, ,$(1)))))
-get-tgy = $(lastword $(subst _, ,$(filter tgy_%,$(subst __, ,$(1)))))
+get-num-tg = $(lastword $(subst _, ,$(filter num-tg_%,$(subst __, ,$(1)))))
 get-tlevel = $(lastword $(subst _, ,$(filter tlevel_%,$(subst __, ,$(1)))))
 
 
@@ -29,8 +28,7 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 	@echo test-name  = $* >> $@
 	@echo graph  = $(call get-graph,$*) >> $@
 	@echo pod-id = $(call get-pod-id,$*) >> $@
-	@echo tgx = $(call get-tgx,$*) >> $@
-	@echo tgy = $(call get-tgy,$*) >> $@
+	@echo num-tg = $(call get-num-tg,$*) >> $@
 	@echo tlevel = $(call get-tlevel,$*) >> $@
 
 include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
