--- a/apps/multipod/barnes_hut/Makefile
+++ b/apps/multipod/barnes_hut/Makefile
@@ -4,11 +4,13 @@ HB_HAMMERBENCH_PATH = $(shell git rev-parse --show-toplevel)
 all: generate
 
 # test name;
-test-name = nbodies_$(1)__pod-id_$(2)
+test-name = nbodies_$(1)__pod-id_$(2)__tgx_$(3)__tgy_$(4)
 
 # parameters;
 get-nbodies = $(lastword $(subst _, ,$(filter nbodies_%,$(subst __, ,$(1)))))
 get-pod-id  = $(lastword $(subst _, ,$(filter pod-id_%,$(subst __, ,$(1)))))
+get-tgx  = $(lastword $(subst _, ,$(filter tgx_%,$(subst __, ,$(1)))))
+get-tgy  = $(lastword $(subst _, ,$(filter tgy_%,$(subst __, ,$(1)))))
 
 # TESTS;
 TESTS = 
@@ -24,6 +26,8 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 	@echo test-name  = $* >> $@
 	@echo nbodies = $(call get-nbodies,$*) >> $@
 	@echo pod-id  = $(call get-pod-id,$*) >> $@
+	@echo tgx  = $(call get-tgx,$*) >> $@
+	@echo tgy  = $(call get-tgy,$*) >> $@
 
 
 include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
