--- a/apps/multipod/pagerank/Makefile
+++ b/apps/multipod/pagerank/Makefile
@@ -4,13 +4,14 @@ HB_HAMMERBENCH_PATH = $(shell git rev-parse --show-toplevel)
 all: generate
 
 # test name
-test-name = graph_$(1)__pod-id_$(2)
+test-name = graph_$(1)__pod-id_$(2)__tgx_$(3)__tgy_$(4)
 
 
 # get parameters;
 get-graph  = $(lastword $(subst _, ,$(filter graph_%,$(subst __, ,$(1)))))
 get-pod-id = $(lastword $(subst _, ,$(filter pod-id_%,$(subst __, ,$(1)))))
-
+get-tgx = $(lastword $(subst _, ,$(filter tgx_%,$(subst __, ,$(1)))))
+get-tgy = $(lastword $(subst _, ,$(filter tgy_%,$(subst __, ,$(1)))))
 
 # tests;
 TESTS =
@@ -26,6 +27,8 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 	@echo test-name  = $* >> $@
 	@echo graph  = $(call get-graph,$*) >> $@
 	@echo pod-id = $(call get-pod-id,$*) >> $@
+	@echo tgx = $(call get-tgx,$*) >> $@
+	@echo tgy = $(call get-tgy,$*) >> $@
 
 
 include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
