add clean target;

--- a/apps/multipod/Makefile
+++ b/apps/multipod/Makefile
@@ -1,19 +1,43 @@
-jacobi:
+BENCHMARKS = jacobi fft128 fft256 sgemm barnes_hut bfs pagerank spgemm
+
+
+# clean target;
+clean.jacobi:
+	make -C jacobi/ clean
+clean.fft128:
+	make -C fft/128/ clean
+clean.fft256:
+	make -C fft/256/ clean
+clean.sgemm:
+	make -C sgemm/ clean
+clean.barnes_hut:
+	make -C barnes_hut/ clean
+clean.bfs:
+	make -C bfs/ clean
+clean.pagerank:
+	make -C pagerank/ clean
+clean.spgemm:
+	make -C spgemm/ clean
+
+
+# run target;
+run.jacobi:
 	make -C jacobi/ profile
-fft128:
+run.fft128:
 	make -C fft/128/ profile
-fft256:
+run.fft256:
 	make -C fft/256/ profile
-sgemm:
+run.sgemm:
 	make -C sgemm/ profile
-barnes_hut:
-	make -C barnes_hut/ profile
-bfs:
-	make -C bfs/ profile
-pagerank:
-	make -C pagerank/ profile
-spgemm:
-	make -C spgemm/ profile
+run.barnes_hut:
+	make -C barnes_hut/ profile -j3
+run.bfs:
+	make -C bfs/ profile -j6
+run.pagerank:
+	make -C pagerank/ profile -j7
+run.spgemm:
+	make -C spgemm/ profile -j4
 
 
-all: jacobi fft128 fft256 sgemm barnes_hut bfs pagerank spgemm
+run_all: $(addprefix run., $(BENCHMARKS))
+clean_all: $(addprefix clean., $(BENCHMARKS))
