--- a/apps/stride/Makefile
+++ b/apps/stride/Makefile
@@ -4,7 +4,7 @@ HB_HAMMERBENCH_PATH = $(shell git rev-parse --show-toplevel)
 all: generate
 
 # call to generate a test name
-test-name = stride-size_$(1)__stride-n_$(2)__x_$(3)__y_$(4)__warmup_$(5)
+test-name = stride-size_$(1)__stride-n_$(2)__x_$(3)__y_$(4)__warmup_$(5)__tiles-x_$(6)__tiles-y_$(7)
 
 # call to get parameter from test name
 get-stride-size = $(lastword $(subst _, ,$(filter stride-size_%,$(subst __, ,$(1)))))
@@ -12,6 +12,8 @@ get-stride-n = $(lastword $(subst _, ,$(filter stride-n_%,$(subst __, ,$(1)))))
 get-x = $(lastword $(subst _, ,$(filter x_%,$(subst __, ,$(1)))))
 get-y = $(lastword $(subst _, ,$(filter y_%,$(subst __, ,$(1)))))
 get-warmup = $(lastword $(subst _, ,$(filter warmup_%,$(subst __, ,$(1)))))
+get-tiles-x = $(lastword $(subst _, ,$(filter tiles-x_%,$(subst __, ,$(1)))))
+get-tiles-y = $(lastword $(subst _, ,$(filter tiles-y_%,$(subst __, ,$(1)))))
 
 # defines tests
 TESTS =
@@ -29,6 +31,8 @@ $(addsuffix /parameters.mk,$(TESTS_DIRS)): %/parameters.mk:
 	@echo x = $(call get-x,$*) >> $@
 	@echo y = $(call get-y,$*) >> $@
 	@echo warmup = $(call get-warmup,$*) >> $@
+	@echo tiles-x = $(call get-tiles-x,$*) >> $@
+	@echo tiles-y = $(call get-tiles-y,$*) >> $@
 
 include $(HB_HAMMERBENCH_PATH)/mk/testbench_common.mk
 
